--- a/index.html
+++ b/index.html
@@ -49,25 +49,7 @@
 							Graphic Design Architect<br />
 							crafted by <a href="http://html5up.net">us</a>.</p>
 							<ul class="actions">
-								<form action="//submit.form" id="NewsletterSubscription100" method="post" onsubmit="return ValidateForm(this);">
-<script type="text/javascript">
-function ValidateForm(frm) {
-if (frm.Name.value == "") { alert('Name is required.'); frm.Name.focus(); return false; }
-if (frm.FromEmailAddress.value == "") { alert('Email address is required.'); frm.FromEmailAddress.focus(); return false; }
-if (frm.FromEmailAddress.value.indexOf("@") < 1 || frm.FromEmailAddress.value.indexOf(".") < 1) { alert('Please enter a valid email address.'); frm.FromEmailAddress.focus(); return false; }
-return true; }
-</script>
-<table border="0" cellpadding="5" cellspacing="0" style="width: 300px; margin: auto; text-align: left;">
-<tr> <td>
-<label for="FromEmailAddress">EMAIL</label><br />
-<input name="FromEmailAddress" type="text" maxlength="60" style="width: 300px;" />
-</td> </tr> <tr> <td align="center">
-<div style="float: right"><a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-<script src="https://www.100forms.com/js/FORMKEY:WMLYHHM3ZJL2/SEND:myketapang@gmail.com" type="text/javascript"></script>
-<input id="skip_Submit" name="skip_Submit" type="submit" value="SUBSCRIBE"/>
-</td> </tr>
-</table>
-</form>
+								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
