--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
 							<p>Your Web &<br />
 							Graphic Design Architect<br />
 							crafted by <a href="http://html5up.net">us</a>.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+						
+							<ul class="actions fit">
+										
+										<li><a href="services.html" class="button special fit">Request a quote</a></li>
+										<li><a href="contact-us.html" class="button fit">Portfolio</a></li>
+									</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
