--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 							<ul class="actions fit">
 										
 								<li><a href="services.html" class="button special fit">Request a quote</a></li>
-										<p><p/>
+							</ul>
+							<ul class="actions fit">
+									
 								<li><a href="contact-us.html" class="button fit">Portfolio</a></li>
-									</ul>
+							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
