--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							crafted by <a href="http://html5up.net">us</a>.</p>
 						
 							<ul class="actions fit">
-								<li><a href="services.html" class="button special fit">Request a quote</a></li>
-								<li><a href="contact-us.html" class="button fit">Portfolio</a></li>
+								<li><a href="services.html" class="button special">Request a quote</a></li>
+								<li><a href="contact-us.html" class="button">Portfolio</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
