--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							Graphic Design Architect<br />
 							crafted by <a href="http://html5up.net">us</a>.</p>
 						
-							<ul class="actions fit">
+							<ul class="actions">
 								<li><a href="services.html" class="button special">Request a quote</a></li>
 								<li><a href="contact-us.html" class="button">Portfolio</a></li>
 							</ul>
