--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
 							<h2>MyKetapang Group</h2>
 							<p>Your Web &<br />
 							Graphic Design Architect<br />
-							crafted by <a href="http://html5up.net">us</a>.</p>
+							crafted by <a href="index.html">us</a>.</p>
 						
 							<ul class="actions">
-								<li><a href="services.html" class="button special">Request a quote</a></li>
-								<li><a href="contact-us.html" class="button">Portfolio</a></li>
+								<li><a href="contact-us.html" class="button special">Request a quote</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -145,7 +144,7 @@
 								how much a website really costs in 2016.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
+								<li><a href="contact-us.html" class="button fit special">Request a quote</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
@@ -161,7 +160,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>COPYRIGHT</li><li>Design: <a href="http://html5up.net">MYKETAPANG GROUP 2016</a></li>
+							<li>COPYRIGHT 2016</li><li>Design: <a href="http://html5up.net">MYKETAPANG GROUP</a></li>
 						</ul>
 					</footer>
 
