--- a/services.html
+++ b/services.html
@@ -63,6 +63,10 @@
     <div id="home" class="tab-pane fade in active">
       <h3>HOME</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
     </div>
     <div id="menu1" class="tab-pane fade">
       <h3>Menu 1</h3>
