--- a/services.html
+++ b/services.html
@@ -62,23 +62,50 @@
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h3>HOME</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="2u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	<div class="2u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	<div class="3u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	<div class="3u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <h3>Menu 1</h3>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h3>Corporate</h3>
+      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <h3>Ecommerce</h3>
+      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
     </div>
     <div id="menu3" class="tab-pane fade">
-      <h3>Menu 3</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <h3>Fun Stuff</h3>
+      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
     </div>
   </div>
 </div>
