--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
+									<img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
