--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup.png" alt="Logo Icon" style="width:25px;height:25px;"><a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<a href="#menu" class="menuToggle"><span>Menu</span><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup.png" alt="Logo Icon" style="width:25px;height:25px;"></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
