--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
+							<img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup.png" alt="Logo Icon" style="width:25px;height:25px;">
 							<h2>MyKetapang Group</h2>
 							<p>Your Web &<br />
 							Graphic Design Architect<br />
