--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>MyKetapang Group</h2>
-							<img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup.png" alt="Logo Icon" style="width:25px;height:25px;">
 							<p>Your Web &<br />
 							Graphic Design Architect<br />
 							crafted by <a href="index.html">us</a>.</p>
@@ -161,7 +160,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>COPYRIGHT 2016</li><li>Design: <a href="http://html5up.net">MYKETAPANG GROUP</a></li>
+							<li>COPYRIGHT 2016</li><li>Design: <a href="https://myketapang.github.io/home/index.html">MYKETAPANG GROUP</a></li>
 						</ul>
 					</footer>
 
