--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<p>Your Web &<br />
 							Graphic Design Architect<br />
 							crafted by <a href="index.html">us</a>.</p>
-							<span class="image center"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white.png" alt=""></span>
+							<span class="image center"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white.png" alt="" width:25px; height:25px; ></span>
 							<ul class="actions">
 								<li><a href="contact-us.html" class="button special">Request a quote</a></li>
 							</ul>
