--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<h2>MyKetapang Group</h2>
 							<p><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" width="100" height="100" alt="myketapang logo">
-  </p><p><br>Your Web &amp;<br>
+  </p><p>Your Web &amp;<br>
 							Graphic Design Architect<br>
 							crafted by <a href="index.html">us</a>.</p>
 							
