--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>MyKetapang Group</h2>
-							<p><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" width="120" height="120" alt="myketapang logo">
-  </p><p>Your Web &amp;<br>
+							<p><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" width="120" height="120" alt="myketapang logo"></p>
+  							<p>Your Web &amp;<br>
 							Graphic Design Architect<br>
 							crafted by <a href="index.html">us</a>.</p>
 							
