--- a/services.html
+++ b/services.html
@@ -14,6 +14,28 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
+		<style type="text/css">
+
+     /** == Add your CSS here == **/
+			.portfolio .thumbnail {
+    position: relative;
+}
+
+.portfolio .thumbnail:hover {
+    cursor: pointer;
+}
+
+.portfolio .caption {
+    bottom: 0;
+    position: absolute;
+}
+
+.portfolio .btn {
+    opacity: 0.75;
+}
+
+     </style>
 	</head>
 	<body class="landing">
 
@@ -50,67 +72,112 @@
 						<section class="wrapper style5">
 							<div class="inner">
 <body>
-<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
-<div class="container">
-  <h2>Dynamic Pills</h2>
-  <ul class="nav nav-pills">
-    <li class="active"><a data-toggle="pill" href="#home">Home</a></li>
-    <li><a data-toggle="pill" href="#menu1">Menu 1</a></li>
-    <li><a data-toggle="pill" href="#menu2">Menu 2</a></li>
-    <li><a data-toggle="pill" href="#menu3">Menu 3</a></li>
-  </ul>
-  
-  <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-      <h3>HOME</h3>
-      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<div class="container" style="padding-top: 60px">
+  <div class="row portfolio">
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?1" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs btn-lg pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart"></i><i class="fa fa-heart-o"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
-    <div id="menu1" class="tab-pane fade">
-      <h3>Corporate</h3>
-      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?2" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart"></i><i class="fa fa-heart"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?3" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart"></i><i class="fa fa-heart-o"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
-    <div id="menu2" class="tab-pane fade">
-      <h3>Ecommerce</h3>
-      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?4" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart-o"></i><i class="fa fa-heart-o"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?5" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart"></i><i class="fa fa-heart-o"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
-    <div id="menu3" class="tab-pane fade">
-      <h3>Fun Stuff</h3>
-      	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?6" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart"></i><i class="fa fa-heart"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?7" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart"></i><i class="fa fa-heart-o"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?8" alt="The awesome description" data-toggle="modal" data-target="#myModal">
+        <div class="caption">
+          <p class="btn btn-default btn-xs pull-right" rel="tooltip"><i class="fa fa-heart"></i><i
+            class="fa fa-heart"></i><i class="fa fa-heart-o"></i><i class="fa fa-heart-o"></i><i
+            class="fa fa-heart-o"></i></p>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Im the awesome cat!</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?42" alt="The awesome description">
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
 </body>
 								
 							</div>
