--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
 <body>
 <div class="container" style="padding-top: 60px">
   <div class="row portfolio">
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?1" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -85,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?2" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -96,7 +96,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?3" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -107,7 +107,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?4" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?5" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -129,7 +129,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?6" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -140,7 +140,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?7" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
