--- a/services.html
+++ b/services.html
@@ -72,7 +72,13 @@
 						<section class="wrapper style5">
 							<div class="inner">
 <body>
-<div class="container" style="padding-top: 60px">
+	<div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h1 class="page-header">Completed Projects</h1>
+            </div>
   <div class="row portfolio">
     <div class="col-lg-3 col-md-3 col-xs-6 thumb">
       <div class="thumbnail">
