--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
             <div class="col-lg-9">
                 <h1 class="page-header">Completed Projects</h1>
             </div>
-  <div class="row portfolio">
+  <div class="row">
     <div class="col-lg-3 col-md-3 col-xs-6 thumb">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?1" alt="The awesome description" data-toggle="modal" data-target="#myModal">
@@ -162,6 +162,7 @@
     </div>
   </div>
 </div>
+		</div>
 </body>
 								
 							</div>
