--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
                 <h1 class="page-header">Completed Projects</h1>
             </div>
   <div class="row">
-    <div class="col-lg-3 col-md-3 col-xs-6 thumb">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?1" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-xs-6 thumb">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?4" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -102,7 +102,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-xs-6 thumb">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?5" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -113,7 +113,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-xs-6 thumb">
+   <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?6" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -124,7 +124,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-xs-6 thumb">
+    <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?7" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -135,7 +135,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-xs-6 thumb">
+   <div class="col-md-4">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?8" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
