--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
                 <h1 class="page-header">Completed Projects</h1>
             </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 .col-md-offset-3">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?1" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 .col-md-offset-3">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?4" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 .col-md-offset-3">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?5" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -115,7 +115,7 @@
       </div>
     </div>
 	  	   <div class="row">
-   <div class="col-md-3">
+   <div class="col-md-3 .col-md-offset-3">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?6" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -126,7 +126,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 .col-md-offset-3">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?7" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
@@ -137,7 +137,7 @@
         </div>
       </div>
     </div>
-   <div class="col-md-3">
+   <div class="col-md-3 .col-md-offset-3">
       <div class="thumbnail">
         <img class="img-responsive" src="http://lorempixel.com/600/400/cats/?8" alt="The awesome description" data-toggle="modal" data-target="#myModal">
         <div class="caption">
