--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 50px; width: 50px;" /><a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<p><img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 15px; width: 15px;" />&nbsp;<a href="#menu" class="menuToggle"><span>Menu</span></a></p>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
