--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 16px; width: 16px;" />&nbsp;&nbsp;<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<a href="#menu" class="menuToggle"><span><img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 16px; width: 16px;" />&nbsp;&nbsp;Menu</span></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
