--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span>&nbsp;&nbsp;<img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 25px; width: 25px;" />&nbsp;&nbsp;</a>
+									<a href="#menu" class="menuToggle"><span>Menu</span>&nbsp;&nbsp;<img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 25px; width: 25px; margin: 5px;" />&nbsp;&nbsp;</a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>MyKetapang Group</h2>
-							<p><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" width="120" height="120" alt="myketapang logo"></p>
+							<p><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" width="120" height="120"  alt="myketapang logo"></p>
   							<p>Your Web &amp;<br>
 							Graphic Design Architect<br>
 							crafted by <a href="index.html">us</a>.</p>
