--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span>&nbsp;&nbsp;<img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 2.5%; width: 2.5%;" />&nbsp;&nbsp;</a>
+									<a href="#menu" class="menuToggle"><span>Menu</span>&nbsp;&nbsp;<center><img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 25px; width: 25px;" /></center>&nbsp;&nbsp;</a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
