--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span><img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 25px; width: 25px; margin: 5px;" /></a>
+									<a href="#menu" class="menuToggle"><span>Menu</span>&nbsp;&nbsp;<img alt="" src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" style="height: 25px; width: 25px; margin: 5px;" /></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
