--- a/index.html
+++ b/index.html
@@ -47,30 +47,30 @@
 						<div class="inner">
 							<h2>MyKetapang Group</h2>
 							<p><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup-white-02-01.png" width="120" height="120"  alt="myketapang logo"></p>
-  							<p>Your Web &amp;<br>
-							Graphic Design Architect<br>
-							crafted by <a href="index.html">us</a>.</p>
+  							<p>"Your Web &amp;<br>
+							Graphic Design Architect"<br>
+							crafted by <a href="services.html">us</a>.</p>
 							
 							<ul class="actions">
 								<li><a href="contact-us.html" class="button special">Request a quote</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Discover more...</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Our Services</h2>
+								<p>With MyKetapang Group, your ideas shaped with our creativity into reality.<br />
+								From individuals to organization, MyKetapang helps local businesses achieve their IT goals,<br />
+								overcome challenges by adapting and excel in latest trending of technology.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-diamond major style1"><span class="label">Creative Design</span></span></li>
+								<li><span class="icon fa-heart-o major style2"><span class="label">Photography</span></span></li>
+								<li><span class="icon fa-code major style3"><span class="label">Website Development</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -79,23 +79,22 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Strengthen Your Brand</h2>
+								<p>Optimization SEO to rank you higher and attract global audience. Including Search Engine Optimization (SEO)/ Social Media Marketing (SEM) / Mobile Marketing / Brand Strategy and Planning.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Best Developer<br />
+								For Excellent Results</h2>
+								<p>At MyKetapang, we don’t just improve, but we also enhance your website. In term of usability / Brand Image / Better Experience and Responsive Web Development.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Successful Projects<br />
+								With MyKetapang</h2>
+								<p>Discover our projects on website development to know more about our capabilities and services.</p>
 							</div>
 						</section>
 					</section>
