--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Branding</h3>
+									<p>We don’t just improve, but we also enhance your website and branding.</p>
 								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Graphic design</h3>
+									<p>We design custom logo design, branding and printed design for client’s value and experience.</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Web Development</h3>
+									<p>We use creativity and technology to develop high performance, user friendly and well-integrated website.</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Video Editing</h3>
+									<p>Our video editing service professionals are ready to transform your video clips into professional look and great sounding videos.</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Testimonials</h3>
+									<p>All testimonials we receive from our clients are equally good, so it was difficult to pick only a couple of them.</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Successful Projects</h3>
+									<p>Discover our projects on website development to know more about our capabilities and services.</p>
 								</li>
 							</ul>
 						</div>
@@ -140,13 +140,13 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Pricing</h2>
+								<h2>Request a quote</h2>
 								<p>Determining website cost can be tricky for business owners, so we put together our estimation on
-								how much a website really costs in 2016.</p>
+								how much a website really costs in 2016/17.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="contact-us.html" class="button fit special">Request a quote</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="contact-us.html" class="button fit special">Request</a></li>
+								<li><a href="#" class="button fit">Testimonials</a></li>
 							</ul>
 						</div>
 					</section>
