--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/strengthen-01.png" alt="" /></div><div class="content">
 								<h2>Strengthen Your Brand</h2>
 								<p>Optimization SEO to rank you higher and attract global audience. Including Search Engine Optimization (SEO)/ Social Media Marketing (SEM) / Mobile Marketing / Brand Strategy and Planning.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/developer-01.png" alt="" /></div><div class="content">
 								<h2>Best Developer<br />
 								For Excellent Results</h2>
 								<p>At MyKetapang, we don’t just improve, but we also enhance your website. In term of usability / Brand Image / Better Experience and Responsive Web Development.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/testimoni-01.png" alt="" /></div><div class="content">
 								<h2>Successful Projects<br />
 								With MyKetapang</h2>
 								<p>Discover our projects on website development to know more about our capabilities and services.</p>
