--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Our Services</h2>
+								<p>Here’s a few examples of our offering services.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
