--- a/pricing.html
+++ b/pricing.html
@@ -90,8 +90,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="services.html">Services</a></li>
+											<li><a href="pricing.html">Our Portfolios</a></li>
 											<li><a href="team.html">Team</a></li>
-											<li><a href="pricing.html">Pricing</a></li>
 											<li><a href="contact-us.html">Contact us</a></li>
 										</ul>
 									</div>
