--- a/contact-us.html
+++ b/contact-us.html
@@ -31,9 +31,9 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="services.html">Services</a></li>
+											<li><a href="pricing.html">Our Portfolios</a></li>
 											<li><a href="team.html">Team</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="contact-us.html">Contact us</a></li>
 										</ul>
 									</div>
 								</li>
