--- a/services.html
+++ b/services.html
@@ -9,34 +9,13 @@
 		<title>MyKetapang Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="shortcut icon" href="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Logo-MKGroup.png" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		
-		<style type="text/css">
-
-     /** == Add your CSS here == **/
-			.portfolio .thumbnail {
-    position: relative;
-}
-
-.portfolio .thumbnail:hover {
-    cursor: pointer;
-}
-
-.portfolio .caption {
-    bottom: 0;
-    position: absolute;
-}
-
-.portfolio .btn {
-    opacity: 0.75;
-}
-
-     </style>
 	</head>
+	
 	<body class="landing">
 
 		<!-- Page Wrapper -->
