--- a/pricing.html
+++ b/pricing.html
@@ -47,7 +47,8 @@
 					<article id="main">
 						<header>
 							<h2><span style="color:#FFFFFF;">Our Portfolios</span></h2>
-							<p>Here’s a few examples of our past work. To view our full portfolio, click on the button below.</p>
+							<p>Here’s a few examples of our past work,<br>
+							To view our full portfolio, click on the button below.</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
