--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/testimoni-01.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/testimoni-02.jpg" alt="" /></div><div class="content">
 								<h2>Successful Projects<br />
 								With MyKetapang</h2>
 								<p>Discover our projects on website development to know more about our capabilities and services.</p>
