--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="services.html">Services</a></li>
-											<li><a href="pricing.html">Our Portfolios</a></li>
+											<li><a href="pricing.html">Portfolios</a></li>
 											<li><a href="team.html">Team</a></li>
 											<li><a href="contact-us.html">Contact us</a></li>
 										</ul>
